# Olio-ohjelmointi-ja-oliopohjainen-suunnittelu

H1/: CMakeLists.txt  main.cpp
H2a/: CMakeLists.txt  car.cpp  car.h  main.cpp  rectangle.cpp  rectangle.h  student.cpp  student.h
H2b/: CMakeLists.txt  H2b_global.h  car.cpp  car.h  h2b.h  main.cpp
H3A/: CMakeLists.txt  main.cpp
H3B/: CMakeLists.txt  main.cpp
H5/: ClassA1.h  ClassA2.h  ClassB.h  h5  main.cpp
H6A/: h6a.pro  main.cpp  myclass.cpp
H6B/: exampleclass.cpp  exampleclass.h  main.cpp
H7/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
